--- a/index.html
+++ b/index.html
@@ -6,58 +6,76 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Codice Fiscale: Calcolo e Decodifica</h1>
-  <div class="container">
-    <!-- Sezione per generare il Codice Fiscale -->
-    <section id="generator">
-      <h2>Genera il Codice Fiscale</h2>
-      <form id="cfForm">
-        <!-- Prima riga: Nome e Cognome -->
-        <div class="form-row">
-          <div class="form-group">
-            <label for="name">Nome:</label>
-            <input type="text" id="name" required>
-          </div>
-          <div class="form-group">
-            <label for="surname">Cognome:</label>
-            <input type="text" id="surname" required>
-          </div>
-        </div>
-        <!-- Seconda riga: Data di nascita, Sesso, Comune -->
-        <div class="form-row">
-          <div class="form-group">
-            <label for="birthdate">Data di nascita (YYYY-MM-DD):</label>
-            <input type="date" id="birthdate" required>
-          </div>
-          <div class="form-group">
-            <label for="gender">Sesso:</label>
-            <select id="gender" required>
-              <option value="M">M</option>
-              <option value="F">F</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="place">Comune di nascita:</label>
-            <!-- Utilizzo del datalist per l'autocomplete -->
-            <input type="text" id="place" list="comuniList" required>
-            <datalist id="comuniList"></datalist>
-          </div>
-        </div>
-        <button type="submit">Genera Codice Fiscale</button>
-      </form>
-      <p id="cfResult"></p>
-    </section>
+  <div class="wrapper">
+    <h1>Codice Fiscale: Calcolo e Decodifica</h1>
 
-    <!-- Sezione per decodificare il Codice Fiscale -->
-    <section id="decoder">
-      <h2>Decodifica il Codice Fiscale</h2>
-      <form id="decodeForm">
-        <label for="cfInput">Inserisci Codice Fiscale:</label>
-        <input type="text" id="cfInput" required>
-        <button type="submit">Decodifica</button>
-      </form>
-      <p id="decodeResult"></p>
-    </section>
+    <div class="container">
+      <!-- Sezione per generare il Codice Fiscale -->
+      <section id="generator">
+        <h2>Genera il Codice Fiscale</h2>
+        <form id="cfForm">
+          <!-- Prima riga: Nome e Cognome -->
+          <div class="form-row">
+            <div class="form-group">
+              <label for="name">Nome:</label>
+              <input type="text" id="name" required>
+            </div>
+            <div class="form-group">
+              <label for="surname">Cognome:</label>
+              <input type="text" id="surname" required>
+            </div>
+          </div>
+
+          <!-- Seconda riga: Data di nascita, Sesso, Comune di nascita -->
+          <div class="form-row">
+            <div class="form-group" id="birthGroup">
+              <label for="birthdate">Data di nascita:</label>
+              <input type="date" id="birthdate" required>
+            </div>
+            <div class="form-group" id="genderGroup">
+              <label for="gender">Sesso:</label>
+              <select id="gender" required>
+                <option value="M">M</option>
+                <option value="F">F</option>
+              </select>
+            </div>
+            <div class="form-group" id="placeGroup">
+              <label for="place">Comune di nascita:</label>
+              <input type="text" id="place" list="comuniList" required>
+              <datalist id="comuniList"></datalist>
+            </div>
+          </div>
+
+          <button type="submit">Genera Codice Fiscale</button>
+        </form>
+
+        <!-- Box dedicato all'output -->
+        <div class="output-box">
+          <span id="cfResultText"></span>
+          <!-- Bottone per copiare il CF (inizialmente nascosto via script) -->
+          <button id="copyCFButton" class="copy-button" style="display: none;" title="Copia il codice fiscale">
+            <!-- Icona "copia" (inline SVG) -->
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+              <path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 
+                1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/>
+            </svg>
+          </button>
+        </div>
+      </section>
+
+      <!-- Sezione per decodificare il Codice Fiscale -->
+      <section id="decoder">
+        <h2>Decodifica il Codice Fiscale</h2>
+        <form id="decodeForm">
+          <label for="cfInput">Inserisci Codice Fiscale:</label>
+          <input type="text" id="cfInput" required>
+          <button type="submit" id="decodeBtn">Decodifica</button>
+        </form>
+
+        <!-- Box dedicato all'output -->
+        <div class="output-box" id="decodeResultBox"></div>
+      </section>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
