on mobile tthe input fileds are now disposed in 3 rows

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="it">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    <!-- Meta viewport per adattarsi ai dispositivi mobili -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codice Fiscale - Calcolatore e Decodificatore</title>
     <!-- Import del font "Poppins" da Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -84,11 +85,14 @@
             </section>
         </div>
     </div>
+
     <div id="credits">
         <div class="credits-title">CREATED BY</div>
         <div class="credits-author">falker47 &ndash; Maurizio Falconi</div>
-      </div>
+    </div>
+
     <script src="script.js"></script>
+    
 </body>
 
 </html>
