--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <!-- Meta viewport per adattarsi ai dispositivi mobili -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codice Fiscale - Calcolatore e Decodificatore</title>
+    
+    <!-- Favicons -->
+    <link href="https://i.postimg.cc/rmCxjswj/main-falker-logo-gecko-transparent-minimal.png" rel="icon">
+    <link href="https://i.postimg.cc/rmCxjswj/main-falker-logo-gecko-transparent-minimal.png" rel="apple-touch-icon">
+
     <!-- Import del font "Poppins" da Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -92,7 +97,7 @@
     </div>
 
     <script src="script.js"></script>
-    
+
 </body>
 
 </html>
