--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <title>Codice Fiscale - Calcolatore e Decodificatore</title>
 
     <!-- Favicons -->
-    <link href="https://i.postimg.cc/rmCxjswj/main-falker-logo-gecko-transparent-minimal.png" rel="icon">
-    <link href="https://i.postimg.cc/rmCxjswj/main-falker-logo-gecko-transparent-minimal.png" rel="apple-touch-icon">
+  <link href="https://i.postimg.cc/rmCxjswj/main-falker-logo-gecko-transparent-minimal.png" rel="icon">
+  <link href="https://i.postimg.cc/rmCxjswj/main-falker-logo-gecko-transparent-minimal.png" rel="apple-touch-icon">
+
+  <!-- Anteprima Immagine -->
+  <meta property="og:image" content="https://i.postimg.cc/KY9JyDdC/main-falker-logo-gecko-circle-night-blue-2.png">
+  <meta name="twitter:image" content="https://i.postimg.cc/KY9JyDdC/main-falker-logo-gecko-circle-night-blue-2.png">
 
     <!-- Import del font "Poppins" da Google Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
