--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <!-- Anteprima Immagine (Open Graph e Twitter) -->
   <meta property="og:title" content="Calcolo Codice Fiscale">
   <meta property="og:description" content="Web app moderna e responsiva per generare e decodificare il codice fiscale.">
-  <meta property="og:image" content="assets/codice-fiscale.webp">
+  <meta property="og:image" content="codice-fiscale.webp">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Calcolo Codice Fiscale">
   <meta name="twitter:description" content="Web app moderna e responsiva per generare e decodificare il codice fiscale.">
-  <meta name="twitter:image" content="assets/codice-fiscale.webp">
+  <meta name="twitter:image" content="codice-fiscale.webp">
 
   <!-- Import del font "Poppins" da Google Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
