--- a/index.html
+++ b/index.html
@@ -101,10 +101,14 @@
     </div>
   </div>
 
-  <div id="credits">
-    <div class="credits-title">CREATED BY</div>
-    <div class="credits-author">falker47 &ndash; Maurizio Falconi</div>
-  </div>
+  <footer>
+  <p>
+    <a href="https://falker47.github.io/Codice-Fiscale/" target="_blank">
+      &copy; <span id="currentYear"></span> Maurizio Falconi - falker47
+    </a>
+  </p>
+</footer>
+
 
   <script src="script.js"></script>
 </body>
