--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   <footer>
   <p>
-    <a href="https://falker47.github.io/Codice-Fiscale/" target="_blank">
+    <a href="https://falker47.github.io/Nexus-portfolio/" target="_blank">
       &copy; <span id="currentYear"></span> Maurizio Falconi - falker47
     </a>
   </p>
