Update title scheda 1

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container">
       <!-- Sezione per generare il Codice Fiscale -->
       <section id="generator">
-        <h2>Genera il Codice Fiscale</h2>
+        <h2>Calcola il Codice Fiscale</h2>
         <form id="cfForm">
           <!-- Prima riga: Nome e Cognome (no-wrap per evitare wrapping su mobile) -->
           <div class="form-row no-wrap">
