style: improve UI styling and responsiveness
- Enhance background with gradient and add min-height
- Improve card styling with gradients, shadows and hover effects
- Refine form elements with better spacing and focus states
- Update button styles with gradients and animations
- Improve responsive design for mobile devices
- Update meta descriptions for better clarity

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
   <!-- Anteprima Immagine (Open Graph e Twitter) -->
   <meta property="og:title" content="Calcolo Codice Fiscale">
-  <meta property="og:description" content="Web app moderna e responsiva per generare e decodificare il codice fiscale.">
+  <meta property="og:description" content="Web app che calcola il codice fiscale italiano a partire dai dati anagrafici e viceversa, ovvero recuperare dal codice fiscale sesso, data e luogo di nascita.">
   <meta property="og:image" content="https://falker47.github.io/Codice-Fiscale/codice-fiscale.webp">
   <meta property="og:type" content="website">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Calcolo Codice Fiscale">
-  <meta name="twitter:description" content="Web app moderna e responsiva per generare e decodificare il codice fiscale.">
+  <meta name="twitter:description" content="Web app che calcola il codice fiscale italiano a partire dai dati anagrafici e viceversa, ovvero recuperare dal codice fiscale sesso, data e luogo di nascita.">
   <meta name="twitter:image" content="https://falker47.github.io/Codice-Fiscale/codice-fiscale.webp">
 
   <!-- Import del font "Poppins" da Google Fonts -->
